--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5fa626;">
-      <a class="navbar-brand" href="#"><img src="logo.png" width="30" height="30" alt=""></a>
+      <a class="navbar-brand" href="#"><img src="logo.png" alt="GEMS"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
