Replaced column with offset(TEST)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="offset-6">
             
           <a class="navbar-brand" href="#"><img src="logo.png" alt="GEMS" style="margin-top:35px;"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
