--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -12,6 +13,9 @@
     <title>GEMS Environmental</title>
   </head>
   <body>
+    <div id="slogan">
+      Engineering & Construction
+    </div> 
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5fa626;">
         <a class="navbar-brand" href="#"><img src="logo.png" alt="GEMS" style="margin-top:35px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,7 +23,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#">Home</a>
+            <a class="nav-item nav-link" href="#" style="border-left: 1px solid #000">Home</a>
             <a class="nav-item nav-link" href="#">Services</a>
             <a class="nav-item nav-link" href="#">Projects</a>
             <a class="nav-item nav-link" href="#">Clients</a>
