Added background color

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <title>GEMS Environmental</title>
   </head>
-  <body>
+  <body style="background-color:#bccb78";>
     <div id="slogan">
       Engineering & Construction
     </div> 
