--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,29 +8,54 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
-    
+
     <title>GEMS Environmental</title>
   </head>
-  <body style="background-color:#bccb78";>
-    <div id="slogan">
+  <body>
+
+    <div id="slogan" class="d-none d-md-block">
       Engineering & Construction
-    </div> 
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5fa626;">
-        <a class="navbar-brand" href="#"><img src="logo.png" alt="GEMS" style="margin-top:35px;"></a>
+    </div>
+
+
+
+      <nav class="navbar navbar-expand-lg navbar-light">
+            <!-- logo -->
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- Container start-->
+    <div class="container">
+  <a class="logo" href="#"><img src="img/logo.png" alt="GEMS" class="d-none d-lg-block"></a>
+         <!-- navigation start -->
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+          <!-- links start -->
+         <div class="navbar-nav">
             <a class="nav-item nav-link" href="#" style="border-left: 1px solid #000">Home</a>
             <a class="nav-item nav-link" href="#">Services</a>
             <a class="nav-item nav-link" href="#">Projects</a>
             <a class="nav-item nav-link" href="#">Clients</a>
             <a class="nav-item nav-link" href="#">About Us</a>
             <a class="nav-item nav-link" href="#">Contact Us</a>
-          </div>
+         </div>
+          <!-- links end -->
         </div>
-    </nav>
+         <!-- nagivation end -->
+      </nav>
+
+
+ <!-- this row has issues -->
+      <div class="row">
+
+
+
+
+
+      </div>
+      <!-- Container end-->
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
