--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
+<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -18,19 +17,19 @@
     </div>
 
 
-
+<!-- Drop down start-->
       <nav class="navbar navbar-expand-lg navbar-light">
-            <!-- logo -->
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="dropdown" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <!-- Container start-->
+
+<!-- Drop down end-->
+<!-- Container start-->
     <div class="container">
-  <a class="logo" href="#"><img src="img/logo.png" alt="GEMS" class="d-none d-lg-block"></a>
-         <!-- navigation start -->
+  <a class="logo" href="#"><img src="img/logo.png" alt="GEMS" class="d-none d-xl-block"></a>
+<!-- navigation start -->
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <!-- links start -->
+<!-- links start -->
          <div class="navbar-nav">
             <a class="nav-item nav-link" href="#" style="border-left: 1px solid #000">Home</a>
             <a class="nav-item nav-link" href="#">Services</a>
@@ -39,25 +38,83 @@
             <a class="nav-item nav-link" href="#">About Us</a>
             <a class="nav-item nav-link" href="#">Contact Us</a>
          </div>
-          <!-- links end -->
+<!-- links end -->
         </div>
-         <!-- nagivation end -->
+<!-- nagivation end -->
       </nav>
-
-
- <!-- this row has issues -->
-      <div class="row">
-
-
-
-
-
-      </div>
-      <!-- Container end-->
+<!-- Container end-->
     </div>
+
+<!-- Space-->
+<div class="d-none d-xl-block" style="height:50px;"></div>
+<!-- Space end-->
+
+<!-- Body start-->
+<div class="container" style="background-color:white">
+  <div class="row">
+    <div class="col-8">
+
+<!-- Image slideshow-->
+      <div id="carouselExampleIndicators" class="carousel slide d-none d-md-block" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/Untitled-1.png" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/Untitled-1.png" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/logo.png" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+<!-- Image slideshow end-->
+
+<!-- Text start-->
+      <p>2 of 3 (wider)djd snjdss jdsdd dsdjsi hd dsi shisdhis hifh sygy gug ygg yug uy gygyuy uggyug fddrdese duugufftfttfd
+      2 of 3 (wider)djd snjdss jdsdd dsdjsi hd dsi shisdhis hifh sygy
+      2 of 3 (wider)djd snjdss jdsdd dsdjsi hd dsi shisdhis hifh sygy gug ygg yug uy gygyuy uggyug fddrdese duugufftfttfd
+      2 of 3 (wider)djd snjdss jdsdd dsdjsi hd dsi shisdhis hifh sygy</p>
+    </div>
+<!-- Text end-->
+
+<!-- Featured image start-->
+    <div class="col-4 d-none d-md-block">
+      <a href="#">
+        <div class="featured">
+          <h3 id="featured">Featured Project</h3>
+          <img src="img/logo.png" alt="GEMS" class="img-fluid img-thumbnail">
+        </div>
+      </a>
+      <a href="#">
+        <div class="featured">
+          <h3 id="featured">Featured Client</h3>
+          <img src="img/logo.png" alt="GEMS" class="img-fluid img-thumbnail">
+        </div>
+      </a>
+    </div>
+<!-- Featured image end-->
+  </div>
+<!-- Row end-->
+</div>
+<!-- Container end-->
 
 
     <!-- Optional JavaScript -->
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
